--- a/AverageJoes.Data/AverageJoes.Data.csproj
+++ b/AverageJoes.Data/AverageJoes.Data.csproj
@@ -87,12 +87,22 @@
     <Compile Include="Activity.cs" />
     <Compile Include="IdentityModels.cs" />
     <Compile Include="Membership.cs" />
+    <Compile Include="Migrations\202104212033046_firstmigration.cs" />
+    <Compile Include="Migrations\202104212033046_firstmigration.Designer.cs">
+      <DependentUpon>202104212033046_firstmigration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202104212033046_firstmigration.resx">
+      <DependentUpon>202104212033046_firstmigration.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
