--- a/AverageJoes.Data/AverageJoes.Data.csproj
+++ b/AverageJoes.Data/AverageJoes.Data.csproj
@@ -91,6 +91,14 @@
     <Compile Include="Migrations\202104212033046_firstmigration.Designer.cs">
       <DependentUpon>202104212033046_firstmigration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202104221855249_Empty\Migration.cs" />
+    <Compile Include="Migrations\202104221855249_Empty\Migration.Designer.cs">
+      <DependentUpon>Migration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202104221937393_SecondEmptyMigration.cs" />
+    <Compile Include="Migrations\202104221937393_SecondEmptyMigration.Designer.cs">
+      <DependentUpon>202104221937393_SecondEmptyMigration.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
@@ -102,6 +110,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202104212033046_firstmigration.resx">
       <DependentUpon>202104212033046_firstmigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202104221855249_Empty\Migration.resx">
+      <DependentUpon>Migration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202104221937393_SecondEmptyMigration.resx">
+      <DependentUpon>202104221937393_SecondEmptyMigration.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
