--- a/AverageJoes.Data/AverageJoes.Data.csproj
+++ b/AverageJoes.Data/AverageJoes.Data.csproj
@@ -87,17 +87,17 @@
     <Compile Include="Activity.cs" />
     <Compile Include="IdentityModels.cs" />
     <Compile Include="Membership.cs" />
-    <Compile Include="Migrations\202104212033046_firstmigration.cs" />
-    <Compile Include="Migrations\202104212033046_firstmigration.Designer.cs">
-      <DependentUpon>202104212033046_firstmigration.cs</DependentUpon>
+    <Compile Include="Migrations\202104262334150_Init.cs" />
+    <Compile Include="Migrations\202104262334150_Init.Designer.cs">
+      <DependentUpon>202104262334150_Init.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202104221855249_Empty\Migration.cs" />
-    <Compile Include="Migrations\202104221855249_Empty\Migration.Designer.cs">
-      <DependentUpon>Migration.cs</DependentUpon>
+    <Compile Include="Migrations\202104262335377_Init2.cs" />
+    <Compile Include="Migrations\202104262335377_Init2.Designer.cs">
+      <DependentUpon>202104262335377_Init2.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202104221937393_SecondEmptyMigration.cs" />
-    <Compile Include="Migrations\202104221937393_SecondEmptyMigration.Designer.cs">
-      <DependentUpon>202104221937393_SecondEmptyMigration.cs</DependentUpon>
+    <Compile Include="Migrations\202104262338157_Init3.cs" />
+    <Compile Include="Migrations\202104262338157_Init3.Designer.cs">
+      <DependentUpon>202104262338157_Init3.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -108,14 +108,14 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202104212033046_firstmigration.resx">
-      <DependentUpon>202104212033046_firstmigration.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202104262334150_Init.resx">
+      <DependentUpon>202104262334150_Init.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202104221855249_Empty\Migration.resx">
-      <DependentUpon>Migration.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202104262335377_Init2.resx">
+      <DependentUpon>202104262335377_Init2.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202104221937393_SecondEmptyMigration.resx">
-      <DependentUpon>202104221937393_SecondEmptyMigration.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202104262338157_Init3.resx">
+      <DependentUpon>202104262338157_Init3.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
